css/freelancer.css
/*!
 * Start Bootstrap - Freelancer Bootstrap Theme (http://startbootstrap.com)
 * Code licensed under the Apache License v2.0.
 * For details, see http://www.apache.org/licenses/LICENSE-2.0.
 */

body {
    overflow-x: hidden;
}

p {
    font-size: 20px;
}

p.small {
    font-size: 16px;
}

a,
a:hover,
a:focus,
a:active,
a.active {
    outline: 0;
    color: #18bc9c;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    text-transform: uppercase;
    font-weight: 700;
}

/* hr.star-light,
hr.star-primary {
    margin: 25px auto 30px;
    padding: 0;
    max-width: 250px;
    border: 0;
    border-top: solid 5px;
    text-align: center;
}

hr.star-light:after,
hr.star-primary:after {
    content: "\f005";
    display: inline-block;
    position: relative;
    top: -.8em;
    padding: 0 .25em;
    font-family: FontAwesome;
    font-size: 2em;
}

hr.star-light {
    border-color: #fff;
}

hr.star-light:after {
    color: #fff;
    background-color: #18bc9c;
}

hr.star-primary {
    border-color: #2c3e50;
}

hr.star-primary:after {
    color: #2c3e50;
    background-color: #fff;
}

hr {
    padding: 0;
    padding-bottom: 15px;
    margin: 0;
    max-width: 250px;
    align-content: center;
} */

.img-centered {
    margin: 0 auto;
}

header {
    text-align: center;
    color: #000000;
    margin: 0;
    padding: 0;
}

header .container {
    padding-top: 100px;
    padding-bottom: 50px;
}

header img {
    display: block;
    margin: 0 auto 20px;
}

header .intro-text .name {
    display: block;
    text-transform: uppercase;
    font-size: 2em;
    font-weight: 700;
}

header .intro-text .skills {
    font-size: 1.25em;
    font-weight: 500;
}

header .pageheader {
    text-align: left;
    padding: 200px 50px 2rem 70px;
}

@media screen and (max-width: 768px) {
    header .pageheader {
        padding: 200px 50px 2rem 30px;
    }
}



header .page-text {
    text-align: left;
    height: 100%;
    vertical-align: text-bottom;
}

header .page-text .name {
    display: block;
    text-transform: uppercase;
    font-size: 3em;
    font-weight: 800;
}

header .page-text .quote {
    display: block;
    font-size: 1.25em;
    font-weight: 550;
}

@media(min-width:768px) {
    header .container {
        padding-top: 150px;
        padding-bottom: 100px;
    }

    header .intro-text .name {
        font-size: 4.75em;
    }

    header .intro-text .skills {
        font-size: 1.75em;
    }
}

@media(min-width:768px) {
    .navbar-fixed-top button.nav-button  {
        padding: 0px 0; /*25px*/
        /*margin: 10px 0;*/
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }

    .navbar-fixed-top .navbar-brand button.nav-button {
        font-size: 1.5em;
        -webkit-transition: all .3s;
        -moz-transition: all .3s;
        transition: all .3s;
    }

    .navbar-fixed-top.navbar-shrink button.nav-button {
        padding: 0px 0; /*10px*/
    }

    .navbar-fixed-top.navbar-shrink .navbar-brand button.nav-button {
        font-size: 1.5em;
    }
}

/*
Updates made for Dropdown menu
*/

.navbar {
    text-transform: uppercase;
    font-weight: 700;
    background-color: black;
}

.nav > li > button {
  position: relative;
  display: block;
  padding: 10px 15px;
  text-transform: uppercase;
  font-weight: 700;
}

@media(min-width:768px) {
    .nav > li > button {
        padding-top: 19.5px;
        padding-bottom: 19.5px;
    }
}

.nav > li > button:hover,
.nav > li > button:focus {
  text-decoration: none;
  background-color: #ecf0f1;
}
.nav > li.disabled > button {
  color: #b4bcc2;
}
.nav > li.disabled > button:hover,
.nav > li.disabled > button:focus {
  color: #b4bcc2;
  text-decoration: none;
  background-color: transparent;
  cursor: not-allowed;
}

.navbar-default .navbar-nav > li > button {
  color: #ffffff;
  background-color: transparent;
  outline: 0;
  border: transparent;
}
.navbar-default .navbar-nav > li > button:hover,
.navbar-default .navbar-nav > li > button:focus {
  color: #18bc9c;
  background-color: transparent;
}
.navbar-default .navbar-nav > .active > button,
.navbar-default .navbar-nav > .active > button:hover,
.navbar-default .navbar-nav > .active > button:focus {
  color: #ffffff;
  background-color: #1a242f;
}
.navbar-default .navbar-nav > .disabled > button,
.navbar-default .navbar-nav > .disabled > button:hover,
.navbar-default .navbar-nav > .disabled > button:focus {
  color: #cccccc;
  background-color: transparent;
}

.navbar-default .navbar-nav > .open > button,
.navbar-default .navbar-nav > .open > button:hover,
.navbar-default .navbar-nav > .open > button:focus {
  background-color: #1a242f;
  color: #ffffff;
}

.navbar-inverse .navbar-nav > li > button {
  color: #ffffff;
  background-color: transparent;
  outline: 0;
  border: transparent;
}
.navbar-inverse .navbar-nav > li > button:hover,
.navbar-inverse .navbar-nav > li > button:focus {
  color: #2c3e50;
  background-color: transparent;
}
.navbar-inverse .navbar-nav > .active > button,
.navbar-inverse .navbar-nav > .active > button:hover,
.navbar-inverse .navbar-nav > .active > button:focus {
  color: #ffffff;
  background-color: #15a589;
}
.navbar-inverse .navbar-nav > .disabled > button,
.navbar-inverse .navbar-nav > .disabled > button:hover,
.navbar-inverse .navbar-nav > .disabled > button:focus {
  color: #cccccc;
  background-color: transparent;
}

.navbar-inverse .navbar-nav > .open > button,
.navbar-inverse .navbar-nav > .open > button:hover,
.navbar-inverse .navbar-nav > .open > button:focus {
  background-color: #15a589;
  color: #ffffff;
}

.dropdown-menu {
    background-color: #000000;
    color: #ffffff;
    text-decoration: none;
}

.dropdown-menu > li > a {
    outline: 0;
    background-color: #000000;
    color: #ffffff;
}

.dropdown-menu > li > a:hover,
.dropdown-menu > li > a:focus,
.dropdown-menu > li > a:active {
    outline: 0;
    background-color: #000000;
    color: #18bc9c;
}

.navbar-default .navbar-toggle
{
    border: transparent;
}

.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus {
    color: #666;
    background: #18bc9c;
}

.navbar a:focus {
    outline: 0;
}

.navbar .navbar-nav {
    letter-spacing: 1px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
    /*margin: 10px 0;*/
}

section {
    padding: 100px 0;
}

section h2 {
    margin: 0;
    font-size: 3em;
}

section.success {
    color: #fff;
    background: #2d5986;
}

section.success a,
section.success a:hover,
section.success a:focus,
section.success a:active,
section.success a.active {
    outline: 0;
    color: #2c3e50;
}

@media(max-width:767px) {
    section {
        padding: 75px 0;
    }

    section.first {
        padding-top: 75px;
    }
}
/*
#portfolio .portfolio-item {
    right: 0;
    margin: 0 0 15px;
}

#portfolio .portfolio-item .portfolio-link {
    display: block;
    position: relative;
    margin: 0 auto;
    max-width: 400px;
}

#portfolio .portfolio-item .portfolio-link .caption {
    position: absolute;
    width: 100%;
    height: 100%;
    opacity: 0;
    background: rgba(24,188,156,.9);
    -webkit-transition: all ease .5s;
    -moz-transition: all ease .5s;
    transition: all ease .5s;
}

#portfolio .portfolio-item .portfolio-link .caption:hover {
    opacity: 1;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content {
    position: absolute;
    top: 50%;
    width: 100%;
    height: 20px;
    margin-top: -15px;
    text-align: center;
    font-size: 20px;
    color: #fff;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content i {
    margin-top: -15px;
}

#portfolio .portfolio-item .portfolio-link .caption .caption-content h3,
#portfolio .portfolio-item .portfolio-link .caption .caption-content h4 {
    margin: 0;
}

#portfolio * {
    z-index: 2;
}

@media(min-width:767px) {
    #portfolio .portfolio-item {
        margin: 0 0 30px;
    }
}
*/

.btn-outline {
    margin-top: 15px;
    border: solid 2px #fff;
    font-size: 20px;
    color: #fff;
    background: 0 0;
    transition: all .3s ease-in-out;
}

.btn-outline:hover,
.btn-outline:focus,
.btn-outline:active,
.btn-outline.active {
    border: solid 2px #fff;
    color: #18bc9c;
    background: #fff;
}

.floating-label-form-group {
    position: relative;
    margin-bottom: 0;
    padding-bottom: .5em;
    border-bottom: 1px solid #eee;
}

.floating-label-form-group input,
.floating-label-form-group textarea {
    z-index: 1;
    position: relative;
    padding-right: 0;
    padding-left: 0;
    border: 0;
    border-radius: 0;
    font-size: 1.5em;
    background: 0 0;
    box-shadow: none!important;
    resize: none;
}

.floating-label-form-group label {
    display: block;
    z-index: 0;
    position: relative;
    top: 2em;
    margin: 0;
    font-size: 1em;
    line-height: 1.764705882em;
    vertical-align: middle;
    vertical-align: baseline;
    opacity: 0;
    -webkit-transition: top .3s ease,opacity .3s ease;
    -moz-transition: top .3s ease,opacity .3s ease;
    -ms-transition: top .3s ease,opacity .3s ease;
    transition: top .3s ease,opacity .3s ease;
}

.floating-label-form-group::not(:first-child) {
    padding-left: 14px;
    border-left: 1px solid #eee;
}

.floating-label-form-group-with-value label {
    top: 0;
    opacity: 1;
}

.floating-label-form-group-with-focus label {
    color: #18bc9c;
}

form .row:first-child .floating-label-form-group {
    border-top: 1px solid #eee;
}

footer {
    color: #fff;
}

footer h3 {
    margin-bottom: 30px;
}

footer .footer-above {
    padding-top: 50px;
    background-color: #2c3e50;
}

footer .footer-col {
    margin-bottom: 50px;
}

footer .footer-below {
    padding: 25px 0;
    background-color: #233140;
}

.btn-social {
    display: inline-block;
    width: 50px;
    height: 50px;
    border: 2px solid #fff;
    border-radius: 100%;
    text-align: center;
    font-size: 20px;
    line-height: 45px;
}

.btn:focus,
.btn:active,
.btn.active {
    outline: 0;
}

.scroll-top {
    z-index: 1049;
    position: fixed;
    right: 1%;
    bottom: 1%;
    width: 50px;
    height: 50px;
    margin: 5px;
}

.scroll-top .btn {
    width: 50px;
    height: 50px;
    border-radius: 100%;
    font-size: 18px;
    /*line-height: 28px;*/
}

.scroll-top .btn:focus {
    outline: 0;
}

/*.portfolio-modal .modal-content {
    padding: 100px 0;
    min-height: 100%;
    border: 0;
    border-radius: 0;
    text-align: center;
    background-clip: border-box;
    -webkit-box-shadow: none;
    box-shadow: none;
}

.portfolio-modal .modal-content h2 {
    margin: 0;
    font-size: 3em;
}

.portfolio-modal .modal-content img {
    margin-bottom: 30px;
}

.portfolio-modal .modal-content .item-details {
    margin: 30px 0;
}

.portfolio-modal .close-modal {
    position: absolute;
    top: 25px;
    right: 25px;
    width: 75px;
    height: 75px;
    background-color: transparent;
    cursor: pointer;
}

.portfolio-modal .close-modal:hover {
    opacity: .3;
}

.portfolio-modal .close-modal .lr {
    z-index: 1051;
    width: 1px;
    height: 75px;
    margin-left: 35px;
    background-color: #2c3e50;
    -webkit-transform: rotate(45deg);
    -ms-transform: rotate(45deg);
    transform: rotate(45deg);
}

.portfolio-modal .close-modal .lr .rl {
    z-index: 1052;
    width: 1px;
    height: 75px;
    background-color: #2c3e50;
    -webkit-transform: rotate(90deg);
    -ms-transform: rotate(90deg);
    transform: rotate(90deg);
}

.portfolio-modal .modal-backdrop {
    display: none;
    opacity: 0;
}*/

